# nnhelper

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/device_query/: Makefile  device_query.cu  helper_cuda.h  helper_string.h
src/nnhelper/: info_onnx.py  info_trt.py  list_trt_plugins.py
src/nnhelper/utils/: trt_profile.py
